// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`packem alias > should not trigger a warning if alias option and original is used > cjs content 1`] = `
"'use strict';

var __defProp$1 = Object.defineProperty;
var __name$1 = (target, value) => __defProp$1(target, "name", { value, configurable: true });
const log = /* @__PURE__ */ __name$1(() => console.log("test"), "log");

var __defProp = Object.defineProperty;
var __name = (target, value) => __defProp(target, "name", { value, configurable: true });
const bar = /* @__PURE__ */ __name(() => console.log("bar"), "bar");

bar();
const index = log();

module.exports = index;
"
`;

exports[`packem alias > should not trigger a warning if alias option and original is used > mjs content 1`] = `
"var __defProp$1 = Object.defineProperty;
var __name$1 = (target, value) => __defProp$1(target, "name", { value, configurable: true });
const log = /* @__PURE__ */ __name$1(() => console.log("test"), "log");

var __defProp = Object.defineProperty;
var __name = (target, value) => __defProp(target, "name", { value, configurable: true });
const bar = /* @__PURE__ */ __name(() => console.log("bar"), "bar");

bar();
const index = log();

export { index as default };
"
`;

exports[`packem alias > should not trigger a warning if alias option is used > cjs content 1`] = `
"'use strict';

var __defProp$1 = Object.defineProperty;
var __name$1 = (target, value) => __defProp$1(target, "name", { value, configurable: true });
const log = /* @__PURE__ */ __name$1(() => console.log("test"), "log");

var __defProp = Object.defineProperty;
var __name = (target, value) => __defProp(target, "name", { value, configurable: true });
const bar = /* @__PURE__ */ __name(() => console.log("bar"), "bar");

bar();
const index = log();

module.exports = index;
"
`;

exports[`packem alias > should not trigger a warning if alias option is used > mjs content 1`] = `
"var __defProp$1 = Object.defineProperty;
var __name$1 = (target, value) => __defProp$1(target, "name", { value, configurable: true });
const log = /* @__PURE__ */ __name$1(() => console.log("test"), "log");

var __defProp = Object.defineProperty;
var __name = (target, value) => __defProp(target, "name", { value, configurable: true });
const bar = /* @__PURE__ */ __name(() => console.log("bar"), "bar");

bar();
const index = log();

export { index as default };
"
`;
